public/css/style.css
@font-face {
    font-family: "MedSight Font";
    src: url("../assets/fonts/CoreSansA45Regular.woff2") format("woff2");
}

body, html {
    height: 100%;
    background-image: url("../assets/images/waterfallBG.jpg");
    background-position: center;
    /* background-repeat: no-repeat; */
    background-size: cover;
    background-attachment: fixed;
    padding-top: 30px;
}

.mainSurveyArea {
    background: rgba(255,255,255,0.9);
    border-radius: 45px;
    padding: 2% 4% 2% 4%;
    border-width: 5px;
    border-style: solid;
    border-color: #420b56; 
}

.titleFont {
    text-align: center;
}
/* .btn-secondary{
    background-color: #420b56; 
} */

.navbar-toggler {
    background-color: #420b56;
    stroke: white;
    -webkit-box-shadow: none;
    box-shadow: none;
    padding: 10px 15px 10px 15px;
}

.nav-link {
    color:white !important;
    font-weight:bold;
    opacity: 1;
    font-family: "MedSight Font";
    margin-right: 4px;
    margin-left: 4px;
}

li.nav-item:hover {
    background-color: #420b56;
    border-radius: 20px;
    border-color: #FFC107 !important;
    border: solid 2px;
}

.navbar-nav {
    border-radius:20px;
    background-color:rgba(83,16,126,.7);
    width:10%;
    /* padding-left: 1%; */
}

#navbarNav {
    background-color: white;
    padding: 10px 0px 10px 0px;
    border-radius: 15px;
    width: 20%;
    
}
button:focus {
    outline: 5px auto #FFC107;
}

.fa-bars {
    color: white;
}

#healthFact {
    text-align: center;
}

.healthFactArea {
    background: rgba(255,255,255,0.9);
    border-radius: 45px;
    padding: 2% 4% 2% 4%;
    border-width: 5px;
    border-style: solid;
    border-color: #420b56;
}

.mainImgArea {
    background: rgba(255,255,255,1);
    border-radius: 45px;
    padding: 2% 4% 2% 4%;
    border-width: 5px;
    border-style: solid;
    border-color: #420b56;
    margin: auto;
    height: auto;
    width: 300px;
}

/* ---------------------------------- slider styling start --------------------------------- */

.slidecontainer {
    width: 100%; /* Width of the outside container */
}

/* The slider itself */
.slider {
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: 100%; /* Full-width */
    height: 20px; /* Specified height */
    background: linear-gradient(to left, #ff0000 0%,#ffff00 50%, #33cc33 100%);
    border-radius: 5px;
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}

/* Mouse-over effects */
.slider:hover {
    opacity: 1; /* Fully shown on mouse-over */
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: none;
    width: 32px;
    height: 27px;
    /* background: #420b56; */
    background: url('http://i64.tinypic.com/etiova.png');
    margin-top: 0px;
    border-radius: 0 !important;
}

.slider::-moz-range-thumb {
    width: 30px; /* Set a specific slider handle width */
    height: 30px; /* Slider handle height */
    background: #420b56; /* Green background */
    border-radius: 50%;
    cursor: pointer; /* Cursor on hover */
}

/* --------------------------------- slider styling end --------------------------------- */
/* --------------------------- clickable image styling start ---------------------------- */

.quizimgblock {
    text-align: center;
    margin-bottom: 2em;
}
  
  .check {
    height: 30px;
    width: 30px;
    position: absolute;
    bottom:5%;
    right:30%;
  }

  .quizimgblock div .check {
    opacity: 0;
    transition:opacity .5s ease
  }
  
  .quizimgblock div.quiz-answer:hover .check {
    opacity: 0.6;
  }
  
  .quiz-answer.active .check {
    opacity: 0.9;
  }
  
  .allergyIcons{
    height: 80px;
    width: 80px;
}

  /* Add below if image icon fade is desired */
  /* .quizimgblock a:hover .check img {
    opacity: 1 !important;
  } */
  
/* --------------------------- clickable image styling end ---------------------------- */
/* --------------------------- Card Block Styling Start ---------------------------- */
.cardBlocks{
    margin-bottom: 10px;
    background: rgba(255,255,255,0.9);
    border-radius: 45px;
    padding: 2% 4% 2% 4%;
    border-width: 5px;
    border-style: solid;
    border-color: #420b56; 
}
#false {
    visibility: hidden;
}
.allergyIconsCards {
    height: 40px;
    width: 40px;
}
#cardText{
    margin-left: -15%;
}
.cardHeader {
    font-family: "MedSight Font";
    font-weight: bold;
}
.dropdown-submenu {
    position: relative;
}

.dropdown-submenu .dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -1px;
    color:white !important;
    font-weight:bold;
    opacity: 1;
    font-family: "MedSight Font";
}
.dropdown-menu {
    color:white !important;
    font-weight:bold;
    opacity: 1;
    font-family: "MedSight Font";
    background-color: #420b56;
    stroke: white;
    -webkit-box-shadow: none;
    box-shadow: none;
    padding: 10px 15px 10px 15px;
}
.dropdown-toggle {
    background-color: #420b56;
    stroke: white;
    -webkit-box-shadow: none;
    box-shadow: none;
    padding: 10px 15px 10px 15px;
    font-family: "MedSight Font";
    color:white !important;
}
.level-link {
    color:white !important;
    font-weight:bold;
    opacity: 1;
    font-family: "MedSight Font";
}
.test {
    color:white !important;
    font-weight:bold;
    opacity: 1;
    font-family: "MedSight Font"
}
.level-section {
    background: rgba(255,255,255,0.9);
    border-radius: 45px;
    padding: 2% 4% 2% 4%;
    border-width: 5px;
    border-style: solid;
    border-color: #420b56;
    margin: auto;
    height: auto;
    width: 800px;
}
/* --------------------------- Card Block Styling End ---------------------------- */

/* --------------------- Our Story Page styling start  -------------------- */
#cardSection {
    margin: auto;
    padding: 30px 0 30px 0;
}

.storyCard {
    background: rgba(255,255,255,0.9);
    border-radius: 45px;
    padding: 2% 4% 2% 4%;
    margin: 10px;
    border-width: 5px;
    border-style: solid;
    border-color: #420b56;
}

.card-img-top {
    margin-top: 5px;
    border-radius: 35px;
}

.btn-warning {
    color: #420b56;
    font-weight: bold;
    background: #ffc107;
    border-color: #ffc107;
}

.card-title-ourStory {
    font-family: "MedSight Font";
    font-size: 40px;
    font-weight: bold
}
/* .btn-primary:hover {
    color: #212529;
    background: #a38523;
    border-color: #a38523;
} */

/* .btn-primary:hover {
    color: white;
    opacity: 0.6;
} */

/* --------------------- Our Story Page styling end  -------------------- */
/* --------------------- Dashboard Styling Start ------------------------ */
.svg-container { 
	display: inline-block;
	position: relative;
	width: 100%;
	/* padding-bottom: 100%;  */
	vertical-align: middle; 
	overflow: hidden; 
}

.mainDashboardArea {
    background: rgba(255,255,255,1);
    border-radius: 45px;
    padding: 2% 4% 2% 4%;
    border-width: 5px;
    border-style: solid;
    border-color: #420b56; 
}

.sliderDash {
    width: 75%;
}


/* --------------------- Dashboard Styling End ------------------------ */

/* ------------------Welcome Modal Styling Start---------------- */
.modal{
    color: white;
    font-family: "MedSight Font";
}
.fade {
    background-color:#420b56;
    opacity: .9;
}
.modal-content{
    background-color: #420b56;
    border: 1px solid rgba(0,0,0,0);
    font-size:25px;
}
#welcome-title{
    font-size: 70px;
}
#logo{
    border-radius: 20px;
    margin-top:40px;
}
.modal-footer {
    border-top: 1px solid rgba(0, 0, 0, 0);
}
.modal-body{
    border-top: 3px solid rgba(255, 193, 7, 1);
    opacity: 1;
}
/* ------------------Welcome Modal Styling End---------------- */

